--- a/app/views/decks/index.html.erb
+++ b/app/views/decks/index.html.erb
@@ -10,41 +10,31 @@
   </div>
 <% end %>
 
-  <% @decks.each do | deck | %>
+  <div class="row row-cols-1 row-cols-md-3 g-4">
 
-    <% deck_flashcards_count = @flashcards.where(deck_id: deck.id).count %>
+    <% @decks.each do | deck | %>
 
-    <div class="row deck-row">
-      <div class="col-sm-2 deck-img-col">
-        <%# add deck image here: %>
-        <%= image_tag "#{deck.name.downcase}.jpg", class: "user_deck_img" %>
-        <%# <img src="st_basils_cathedral.jpg" data-src="aws-image.jpg" class="lazyload" /> %>
-      </div>
-      <div class="col-lg-10 deck-info-col">
-        <div class="row deck-row-top-buffer">
-          <div class="col">
-            <h1><%= deck.name %></h1>
-            <%# <h2><%= deck.language</h2> %>
-            <%= deck_flashcards_count %> card(s)
-          </div>
-          <div class="col">
-            <%# <%= button_to "Incorrect", update_review_user_flashcard_path(top_user_flashcard, answer_correct: false), method: :patch %>
-            <%# <%= link_to "Add", decks_path(deck_id: deck.id), method: :post %>
+      <% deck_flashcards_count = @flashcards.where(deck_id: deck.id).count %>
+
+      <div class="col">
+
+        <div class="card bg-dark text-white">
+          <%= image_tag "#{deck.name.downcase}.jpg", class: "card_img" %>
+          <div class="card-img-overlay">
+            <h5 class="card-title"><%= deck.name %></h5>
+            <p class="card-text"><%= deck_flashcards_count %> card(s)</p>
+            <p class="card-text">Last updated 3 mins ago</p>
             <%= button_to "Add", user_decks_path(deck_id: deck.id), method: :post, id: 'show-button', class: 'deck-button' %>
           </div>
-          <div class="col-lg-1 justify-content-end" >
-            <%# Ellipsis options icon: %>
-            <%# <i class="fa-solid fa-ellipsis-vertical"></i> %>
-          </div>
         </div>
-        <div class="row">
-          <div class="col-lg-8">
-          </div>
-        </div>
-      <%# <%= link_to user_deck.language, user_deck_path(user_deck.id) %>
+
       </div>
-    </div>
-    <br>
-  <% end %>
+
+    <% end %>
+
+
+  </div>
+
+
 
 </div>
