--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,11 +35,11 @@ html, body {
 // .navbar {
 //   // position: sticky;
 //   // top: 0;
-//   z-index: 100;
+//   // z-index: 100;
 //   // height: 70px;
-//   box-shadow: 0 4px 4px -4px rgba(0,0,0,.2);
+//   // box-shadow: 0 4px 4px -4px rgba(0,0,0,.2);
 //   background: $green;
-//   color: $gray;
+//   // color: $gray;
 //   // font-size: 30px;
 // }
 
@@ -82,7 +82,7 @@ html, body {
 
 #main {
   // overflow:auto;
-  padding-top: 56px; /* to accommodate navbar */
+  padding-top: 100px; /* to accommodate navbar and padding below navbar */
   padding-bottom: 150px; /* this needs to be bigger than footer height*/
   // min-height: 100%; /* temporary fix */
   // height: 500px; /* temporary fix */
@@ -95,6 +95,17 @@ html, body {
   clear :both;
   padding-top: 20px;
 }
+
+
+// .deck_card_img:after {
+//   // content:"";
+//   // position:absolute;
+//   // top:0;
+//   // bottom:0;
+//   // left:0;
+//   // right:0;
+//   background: rgba(0,0,0,0.6);
+// }
 
 // .my-decks-container {
   // margin: 50px;
@@ -133,15 +144,19 @@ html, body {
 // }
 
 
-.user_deck_card_img {
-    width: 100%;
-    // height: 15vw;
-    object-fit: cover;
-    // display: flex;
-    // justify-content: center;
-    // position: relative;
-    // margin: auto;
-}
+// .user_deck_card_img {
+  // max-width: 100%;
+  // height: 100%;
+  // object-fit: cover;
+
+  // width: 100%;
+  // height: 15vw;
+  // object-fit: cover;
+  // display: flex;
+  // justify-content: center;
+  // position: relative;
+  // margin: auto;
+// }
 
 // .user_deck_img {
 //   object-fit: cover;
