--- a/app/views/user_decks/index.html.erb
+++ b/app/views/user_decks/index.html.erb
@@ -2,141 +2,15 @@
 <%# <div class="container-fluid main-container">
   <div class="row"> %>
     <%# <div class="col"> %>
-<div class='container'>
+<%# <div class='container'> %>
 
-  <% @user_decks.each do | user_deck | %>
+<% @user_decks.each do | user_deck | %>
 
-    <%= render "components/user_deck_card", user_deck: user_deck %>
+  <%= render "components/user_deck_card", user_deck: user_deck %>
 
-    <% deck = @decks.find(user_deck.deck_id) %>
-    <% user_deck_flashcards_count = @user_flashcards.where(user_deck_id: user_deck.id).count %>
-    <% user_deck_flashcards_learnt_count = @user_flashcards.where("user_deck_id = ? AND learnt = ?", user_deck.id, true).count %>
-    <% user_deck_flashcards_to_review_count = @user_flashcards.where("user_deck_id = ? AND learnt = ? AND next_review < ?", user_deck.id, true, Time.now).count %>
+<% end %>
 
-    <%# <div class="row deck-row" style="background-image: url('russian.jpg');"> %>
-    <div class="row deck-row">
-      <div class="col-sm-2 deck-img-col">
-        <%# add deck image here: %>
-        <%= image_tag "#{deck.name.downcase}.jpg", class: "user_deck_img" %>
-        <%# <img src="st_basils_cathedral.jpg" data-src="aws-image.jpg" class="lazyload" /> %>
-      </div>
-      <div class="col-lg-3 deck-info-col">
-        <div class="row deck-row-top-buffer">
-          <div class="col">
-            <%# <h2><%= user_deck.language</h2> %>
-            <h1><%= deck.name %> </h1>
-            <%# <h2><%= deck.language</h2> %>
-            <%= user_deck_flashcards_count %> card(s)
-          </div>
-        </div>
-      </div>
-      <%# <div class="col"> %>
-      <div class="col-lg-4">
-        <%# Deck progress bar %>
-        Deck progress:
-        <%# <%= user_deck_flashcards_learnt_count / user_deck_flashcards_count * 100 %>
-        <%# <%= (user_deck_flashcards_learnt_count / user_deck_flashcards_count) * 100  %>
-        <div class="progress">
-          <% if user_deck_flashcards_learnt_count > 0 && user_deck_flashcards_count > 0 %>
-            <% deck_progress_percentage = user_deck_flashcards_learnt_count.to_f / user_deck_flashcards_count.to_f * 100 %>
-            <%# <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="<%= user_deck_flashcards_learnt_count" aria-valuemin="0" aria-valuemax="<%= user_deck_flashcards_count"></div> %>
-            <div class="progress-bar" role="progressbar" style="width: <%= "#{deck_progress_percentage}%" %>" aria-valuenow= "<%= user_deck_flashcards_learnt_count %>" aria-valuemin="0" aria-valuemax="<%= user_deck_flashcards_count %>"></div>
-          <% end %>
-        </div>
-        <%# <%= user_deck_flashcards_learnt_count / <%= user_deck_flashcards_count %>
-        <%# <br>
-        <%# Daily learn progress bar %>
-        Daily learning goal:
-        <% learnt_today_count = @user_flashcards.where("user_deck_id = ? AND learnt <= ?", user_deck.id, Time.now).count %>
-        <% learnt_today_count = @user_flashcards.where("user_deck_id = ? AND learnt > ? AND learnt <= ?", user_deck.id, Time.now.to_date.midnight, Time.now).count %>
-        <%= learnt_today_count %>
-        <% to_learn_today_count = @user_flashcards.where("user_deck_id = ? AND learnt IS ? AND due_to_learn <= ?", user_deck.id, nil, Time.now).count %>
-        <%# <%= to_learn_today_count %>
-        <% total_learn_today_count = learnt_today_count + to_learn_today_count %>
-        / <%= total_learn_today_count %>
-        <% if learnt_today_count > 0 && total_learn_today_count > 0 %>
-          <% today_learn_progress_percentage = learnt_today_count.to_f / total_learn_today_count.to_f * 100 %>
-        <% else %>
-          <% today_learn_progress_percentage = 0 %>
-        <% end %>
-        <div class="progress">
-          <div class="progress-bar" role="progressbar" style="width: <%= "#{today_learn_progress_percentage}%" %>" aria-valuenow="6" aria-valuemin="0" aria-valuemax="10"></div>
-        </div>
-        <%# <div class="progress">
-          <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="6" aria-valuemin="0" aria-valuemax="10"></div>
-        </div>
-
-
-        <%# Daily review progress bar %>
-        Daily review goal:
-        <% reviewed_today_count = @user_flashcards.where("user_deck_id = ? AND previous_review <= ?", user_deck.id, Time.now).count %>
-        <%# <%= reviewed_today_count %>
-        <% to_review_today_count = @user_flashcards.where("user_deck_id = ? AND next_review <= ?", user_deck.id, Time.now).count %>
-        <%# <%= to_review_today_count %>
-        <% total_review_today_count = reviewed_today_count + to_review_today_count %>
-        <% if reviewed_today_count > 0 && total_review_today_count > 0 %>
-          <% today_review_progress_percentage = reviewed_today_count.to_f / total_review_today_count.to_f * 100 %>
-        <% else %>
-          <% today_review_progress_percentage = 0 %>
-        <% end %>
-        <div class="progress">
-          <div class="progress-bar" role="progressbar" style="width: <%= "#{today_review_progress_percentage}%" %>" aria-valuenow="6" aria-valuemin="0" aria-valuemax="10"></div>
-        </div>
-
-        <%#= (user_deck_flashcards_learnt_count / user_deck_flashcards_count) * 100 %>
-        <%# if user_deck_flashcards_learnt_count > 0 and user_deck_flashcards_count > 0 %>
-          <%#= (user_deck_flashcards_learnt_count / user_deck_flashcards_count) * 100 %>
-        <%# else %>
-          <%# 0% %>
-        <%# end %>
-      </div>
-      <%# </div> %>
-      <div class="col-lg-2">
-        <div class="row w-100 deck-button-col">
-          <%# <%= link_to "Show", user_deck_path(user_deck.id) %>
-          <%= button_to "Show", user_deck_path(user_deck.id), method: :get, id: 'show-button', class: 'deck-button' %>
-
-        </div>
-        <div class="row deck-button-col">
-          <%# <%= link_to "Learn", user_deck_learn_path(user_deck.id) %>
-          <%= button_to "Learn", user_deck_learn_path(user_deck.id), method: :get , id: 'learn-button', class: 'deck-button' %>
-          <%# <button type="button" class="btn btn-warning">Learn</button> %>
-        </div>
-        <div class="row deck-button-col">
-          <%# <%= link_to "Review", user_deck_path(user_deck.id) %>
-          <%# <%= link_to "Review", user_deck_review_path(user_deck.id) %>
-          <% if user_deck_flashcards_to_review_count > 0 %>
-            <%= button_to "Review (#{user_deck_flashcards_to_review_count})", user_deck_review_path(user_deck, answer_checked: false, answer_correct: false), method: :get, id: 'review-button', class: 'deck-button reviews_due' %>
-          <% else %>
-            <%= button_to "Review (#{user_deck_flashcards_to_review_count})", user_deck_review_path(user_deck, answer_checked: false, answer_correct: false), method: :get, id: 'review-button', class: 'deck-button' %>
-          <% end %>
-
-          <%# helper method to return count of review pile %>
-          <%# <%= button_to "Review", user_deck_review_path(user_deck.id) %>
-          <%# <button type="button" class="btn btn-danger">Review</button> %>
-        </div>
-      </div>
-      <%# <%= link_to user_deck.language, user_deck_path(user_deck.id) %>
-      <div class="col-lg-1 justify-content-end" >
-        <%# <i class="fa-solid fa-ellipsis-vertical"></i> %>
-        <div class="dropdown">
-          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="fa-solid fa-ellipsis-vertical"></i>
-          </button>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
-          <%# <%= link_to "Edit learning schedule", user_deck_edit_learning_schedule_path(user_deck), :method => :get %>
-          <%= link_to "Delete", user_deck_path(user_deck), :method => :delete, data: { confirm: "Are you sure you want to delete this deck? This action cannot be undone." } %>
-        </div>
-      </div>
-    </div>
-    <br>
-  <% end %>
-
-</div>
+<%# </div> %>
     <%# </div> %>
     <%# <div class="col">
       Second column
