--- a/app/views/user_decks/review.html.erb
+++ b/app/views/user_decks/review.html.erb
@@ -3,6 +3,8 @@
   <%# SHOW THE CARD WITH THE EARLIEST 'NEXT REVIEW' FIRST: %>
   <h3>Left to review: <%= @user_deck_flashcards.count %></h3>
 
+  <%= render "components/flashcard", top_flashcard: @top_flashcard %>
+
   <div class="row">
     <div class="flashcard-container">
 
@@ -82,9 +84,7 @@
 
   <div class= "row justify-content-center mt-auto d-grid gap-2 answer-buttons-row">
     <%# <div class="d-grid gap-2"> %>
-      <button class="btn btn-primary" type="button">
-        <%= link_to "Check answer", check_answer_user_flashcard_path(@top_user_flashcard, user_answer: user_answer), class: "btn", method: :patch %>
-      </button>
+      <%= link_to "Check answer", check_answer_user_flashcard_path(@top_user_flashcard, user_answer: user_answer), class: "btn btn-primary btn-lg", method: :patch %>
     <%# </div> %>
   </div>
 
