--- a/app/views/user_decks/show.html.erb
+++ b/app/views/user_decks/show.html.erb
@@ -46,7 +46,7 @@
     <%# <% user_deck_flashcard = @user_deck_flashcards.find_by(flashcard_id: flashcard.id) %>
 
     <% if user_deck_flashcard.learnt %>
-      <div class="row border bg-light" style="background-color:green;">
+      <div class="row border bg-success">
     <% else %>
       <div class="row border bg-light">
     <% end %>
