--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,6 +6,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Cabin&family=Cabin+Sketch&family=Merriweather&family=Teko:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cabin&family=Cabin+Sketch:wght@400;700&family=Merriweather&family=Teko:wght@500&display=swap');
 
+// Fonts and colors
+@import "base/typography";
+
+// Pages
+@import "views/static_pages";
+
+// Buttons
+@import "base/buttons";
+
 // Set color scheme
 // $green: #197278;
 $green: #115055;
@@ -38,7 +47,7 @@ html, body {
 //   // z-index: 100;
 //   // height: 70px;
 //   // box-shadow: 0 4px 4px -4px rgba(0,0,0,.2);
-//   background: $green;
+//   background: #004777;
 //   // color: $gray;
 //   // font-size: 30px;
 // }
@@ -143,6 +152,25 @@ html, body {
 //   align-items: center;
 // }
 
+.deck_card:hover {
+  // box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+}
+
+
+.user_deck_card {
+  position: relative; // so the delete icon can have position:absolute and go in the top right of the user deck card
+}
+
+.user_deck_card_delete_icon {
+  display: inline-block;
+  float: right;
+  margin: 13px 5px 0 0;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+// position: relative;
 
 // .user_deck_card_img {
   // max-width: 100%;
