--- a/app/views/components/_user_deck_card.html.erb
+++ b/app/views/components/_user_deck_card.html.erb
@@ -2,14 +2,38 @@
 
 <% deck = @decks.find(user_deck.deck_id) %>
 <% user_deck_flashcards_count = @user_flashcards.where(user_deck_id: user_deck.id).count %>
-<% user_deck_flashcards_learnt_count = @user_flashcards.where("user_deck_id = ? AND learnt = ?", user_deck.id, true).count %>
-<% user_deck_flashcards_to_review_count = @user_flashcards.where("user_deck_id = ? AND learnt = ? AND next_review < ?", user_deck.id, true, Time.now).count %>
+<% user_deck_flashcards_learnt_count = @user_flashcards.where("user_deck_id = ? AND learnt IS NOT ?", user_deck.id, nil).count %>
+<% user_deck_flashcards_to_review_count = @user_flashcards.where("user_deck_id = ? AND learnt IS NOT ? AND next_review < ?", user_deck.id, nil, Time.now).count %>
 
-<div class="card mb-3">
+<!-- Modal -->
+<div class="modal fade" id="ConfirmDeleteDeckModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Are you sure?</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Are you sure you want to delete this deck? This action cannot be undone.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+        <%# <button type="button" class="btn btn-danger">Delete</button> %>
+
+        <%= link_to user_deck_path(user_deck), :method => :delete, class: 'btn btn-danger', data: {toggle: :tab} do %>
+          Delete
+        <% end %>
+
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="card mb-3 user_deck_card">
   <div class="row g-0">
     <div class="col-md-4 d-none d-md-block"> <%# d-none d-md-block hides the image div on screens smaller than md %>
       <%# <img src="images/<%= deck.name.downcase %><%#.jpg" class="img-fluid rounded-start" alt="..."> %>
-      <%= image_tag "#{deck.name.downcase}.jpg", class: "card-img-top user_deck_card_img img-fluid rounded-start", style: "height: 300px;object-fit:cover;" %>
+      <%= image_tag "#{deck.name.downcase}.jpg", class: "card-img-top user_deck_card_img img-fluid rounded-start", style: "height: 322px;object-fit:cover;" %>
     </div>
     <div class="col-md-8">
       <div class="card-body">
@@ -19,7 +43,19 @@
           <li class="list-group-item">
 
             <h3 class="card-title"><%= deck.name %></h3>
-            <p class="card-text"><%= user_deck_flashcards_count %> card(s)</p>
+            <% if user_deck_flashcards_count == 1 %>
+              <p class="card-text"><%= user_deck_flashcards_count %> card</p>
+            <% else %>
+              <p class="card-text"><%= user_deck_flashcards_count %> cards</p>
+            <% end %>
+
+            <%#= link_to user_deck_open_delete_modal_path(user_deck), :method => :patch do %>
+              <%# <i class="fa-solid fa-trash-can user_deck_card_delete_icon text-secondary"></i>
+            <%# end %>
+            <!-- Button trigger confirm delete deck modal -->
+            <div data-bs-toggle="modal" data-bs-target="#ConfirmDeleteDeckModal">
+              <i class="fa-solid fa-trash-can user_deck_card_delete_icon text-secondary"></i>
+            </div>
 
           </li>
 
@@ -28,11 +64,17 @@
             Deck progress:
             <%# <%= user_deck_flashcards_learnt_count / user_deck_flashcards_count * 100 %>
             <%# <%= (user_deck_flashcards_learnt_count / user_deck_flashcards_count) * 100  %>
+            <% if user_deck_flashcards_learnt_count > 0 && user_deck_flashcards_count > 0 %>
+              <% deck_progress_percentage = user_deck_flashcards_learnt_count.to_f / user_deck_flashcards_count.to_f * 100 %>
+            <% else %>
+              <% deck_progress_percentage = 0 %>
+            <% end %>
             <div class="progress">
-              <% if user_deck_flashcards_learnt_count > 0 && user_deck_flashcards_count > 0 %>
-                <% deck_progress_percentage = user_deck_flashcards_learnt_count.to_f / user_deck_flashcards_count.to_f * 100 %>
-                <%# <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="<%= user_deck_flashcards_learnt_count" aria-valuemin="0" aria-valuemax="<%= user_deck_flashcards_count"></div> %>
-                <div class="progress-bar" role="progressbar" style="width: <%= "#{deck_progress_percentage}%" %>" aria-valuenow= "<%= user_deck_flashcards_learnt_count %>" aria-valuemin="0" aria-valuemax="<%= user_deck_flashcards_count %>"></div>
+              <%# <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="<%= user_deck_flashcards_learnt_count" aria-valuemin="0" aria-valuemax="<%= user_deck_flashcards_count"></div> %>
+              <% if deck_progress_percentage == 100 %>
+                <div class="progress-bar bg-success" role="progressbar" style="width: <%= "#{deck_progress_percentage}%" %>" aria-valuenow= "<%= user_deck_flashcards_learnt_count %>" aria-valuemin="0" aria-valuemax="<%= user_deck_flashcards_count %>"></div>
+              <% else %>
+                <div class="progress-bar bg-primary" role="progressbar" style="width: <%= "#{deck_progress_percentage}%" %>" aria-valuenow= "<%= user_deck_flashcards_learnt_count %>" aria-valuemin="0" aria-valuemax="<%= user_deck_flashcards_count %>"></div>
               <% end %>
             </div>
             <%# <%= user_deck_flashcards_learnt_count / <%= user_deck_flashcards_count %>
@@ -53,7 +95,11 @@
               <% today_learn_progress_percentage = 0 %>
             <% end %>
             <div class="progress">
-              <div class="progress-bar" role="progressbar" style="width: <%= "#{today_learn_progress_percentage}%" %>" aria-valuenow="6" aria-valuemin="0" aria-valuemax="10"></div>
+              <% if today_learn_progress_percentage == 100 %>
+                <div class="progress-bar bg-success" role="progressbar" style="width: <%= "#{today_learn_progress_percentage}%" %>" aria-valuenow="6" aria-valuemin="0" aria-valuemax="10"></div>
+              <% else %>
+                <div class="progress-bar bg-warning" role="progressbar" style="width: <%= "#{today_learn_progress_percentage}%" %>" aria-valuenow="6" aria-valuemin="0" aria-valuemax="10"></div>
+              <% end %>
             </div>
             <%# <div class="progress">
               <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="6" aria-valuemin="0" aria-valuemax="10"></div>
@@ -72,7 +118,11 @@
               <% today_review_progress_percentage = 0 %>
             <% end %>
             <div class="progress">
-              <div class="progress-bar" role="progressbar" style="width: <%= "#{today_review_progress_percentage}%" %>" aria-valuenow="6" aria-valuemin="0" aria-valuemax="10"></div>
+              <% if today_review_progress_percentage == 100 %>
+                <div class="progress-bar bg-success" role="progressbar" style="width: <%= "#{today_review_progress_percentage}%" %>" aria-valuenow="6" aria-valuemin="0" aria-valuemax="10"></div>
+              <% else %>
+                <div class="progress-bar bg-danger" role="progressbar" style="width: <%= "#{today_review_progress_percentage}%" %>" aria-valuenow="6" aria-valuemin="0" aria-valuemax="10"></div>
+              <% end %>
             </div>
 
           </li>
@@ -80,25 +130,25 @@
 
         <%# <p class="card-text"><small class="text-muted"></small></p> %>
 
-        <div class="card-footer">
+        <div class="card-footer d-flex justify-content-between">
 
           <%# <div class="btn-group" role="group">
 
             <%# <%= link_to "Show", user_deck_path(user_deck.id) %>
-            <%= link_to "Show", user_deck_path(user_deck.id), method: :get, id: 'show-button', :class => "btn btn-primary w-25" %>
+            <%= link_to "Show", user_deck_path(user_deck.id), method: :get, id: 'show-button', :class => "btn btn-primary", style: "width:32%;" %>
 
             <%# <%= link_to "Learn", user_deck_learn_path(user_deck.id) %>
-            <%= link_to "Learn", user_deck_learn_path(user_deck.id), method: :get , id: 'learn-button', :class => "btn btn-warning w-25" %>
+            <%= link_to "Learn", user_deck_learn_path(user_deck.id), method: :get , id: 'learn-button', :class => "btn btn-warning", style: "width:32%;" %>
             <%# <button type="button" class="btn btn-warning">Learn</button> %>
 
             <%# <%= link_to "Review", user_deck_path(user_deck.id) %>
             <%# <%= link_to "Review", user_deck_review_path(user_deck.id) %>
             <% if to_review_today_count > 0 %>
-              <%= link_to user_deck_review_path(user_deck, answer_checked: false, answer_correct: false), method: :get, id: 'review-button', :class => "btn btn-danger w-25", class: 'btn btn-danger w-25', data: {toggle: :tab} do %>
+              <%= link_to user_deck_review_path(user_deck, answer_checked: false, answer_correct: false), method: :get, id: 'review-button', class: 'btn btn-danger', style: "width:32%;", data: {toggle: :tab} do %>
                 Review <%= content_tag :span, to_review_today_count, class: 'badge bg-dark' %>
               <% end %>
             <% else %>
-              <%= link_to user_deck_review_path(user_deck, answer_checked: false, answer_correct: false), method: :get, id: 'review-button', :class => "btn btn-danger w-25", class: 'btn btn-danger disabled w-25', data: {toggle: :tab} do %>
+              <%= link_to user_deck_review_path(user_deck, answer_checked: false, answer_correct: false), method: :get, id: 'review-button', class: 'btn btn-danger disabled', style: "width:32%;", data: {toggle: :tab} do %>
                 Review <%= content_tag :span, to_review_today_count, class: 'badge bg-dark' %>
               <% end %>
             <% end %>
@@ -110,7 +160,7 @@
               Delete
             </button> %>
 
-            <%= link_to 'Delete', user_deck_path(user_deck), :method => :delete, data: { confirm: "Are you sure you want to delete this deck? This action cannot be undone." }, :class => "btn btn-secondary w-25" %>
+            <%#= link_to 'Delete', user_deck_path(user_deck), :method => :delete, data: { confirm: "Are you sure you want to delete this deck? This action cannot be undone." }, :class => "btn btn-secondary w-25" %>
 
           <%# </div> %>
 
