--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,6 +2,6 @@
 <footer class="page-footer font-small blue pt-4">
   <!-- Copyright -->
   <div class="footer-copyright text-center py-3">© 2022 Copyright:
-    <a href="#"> Verble.com</a>
+    <a href="#" class="text-dark"> Verble.com</a>
   </div>
 </footer>
