--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -17,6 +17,12 @@
         <%# <li class="nav-item active">
           <a class="nav-link" href="#"> Language <span class="sr-only">(current)</span></a>
         </li> %>
+        <li class="nav-link">
+          Log in
+        </li>
+        <li class="nav-link">
+          <span class="badge bg-secondary bg-light text-dark">Sign up</span>
+        </li>
       </ul>
       <% if @user_deck %>
         <ul class="navbar-nav mx-auto">
