--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,11 @@
     <div id="wrap">
       <div id="main" class="container clear-top" style="max-width:800px;">
       <%# <div> %>
+
+        <%# For Devise: %>
+        <p class="notice"><%= notice %></p>
+        <p class="alert"><%= alert %></p>
+
         <%= yield %>
       </div>
     </div>
